chore: 提交项目近期变更 - 优化AI服务、数据分析算法、后端、大数据处理、数据采集器及部署配置